Added green line, changed font

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="text">
         <p>A<span class="description"> snappy </span></p>
-        <p>URL Shrinker</p>
+        <p><span class="underline">URL shrinker</span></p>
       </div>
       <form action="" class="input">
         <input type="text" placeholder="Enter your link here..." />
