Changes to input to make it look more like kzilla.xyz

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <form action="" class="input">
         <input type="text" placeholder="Enter your link here..." />
-        <button type="submit">Shrink</button>
+        <button type="submit">SHRINK</button>
       </form>
     </section>
   </body>
